kubernetes/apps/storage-system/rook-ceph/buckets/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name rook-ceph-rgw-ceph-objectstore-external
spec:
  hostnames: ["s3.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: *name
          port: 80
